# Flashy_Project

./: .gitignore  Application.py  DataAnalyser.py  LICENSE  Pulse.py  README.md  Sunset.py  default_1.tdms  main.py  pulses-100.CSV  pulses-20.CSV  pulses-5-modified.csv  pulses-5.CSV  pyproject.toml  requirements.txt
Controller/: Controller.py  ModelController.py  ViewController.py
Model/: DataAnalyser.py  Digitizer.py  Error.py
Model/Bypass/: Bypass.py  bank-endpoints.py  demo.ipynb  demo_dpp.py  demo_scope.py  test-dpp_endpoints.py  test-raw_endpoints.py  test-rawdpp_endpoints.py
Sunset/: Application.py  Sunset.py
View/: Bypass.py  Feedback.py  FileSelector.py  GraphShowcase.py  InfoTir.py  ListOfResults.py  Style.py
View/Graphs/: Graph.py
View/MainApp/: FileSelector.py  GraphShowcase.py  InfoTir.py  ListOfResults.py  MenuBar.py
_ideas/: arnaud-optimization.py  gui-matplotlib1.py  gui-matplotlib2.py  gui-matplotlib3.py  gui-treeview.py
docs/source/: conf.py  index.rst
example_data/: LEGACY-CoMPASS-pulses_10.CSV  LEGACY-CoMPASS-pulses_5_mod.csv  LEGACY-FLASHy1_0-pulses_2.csv  TDMS-CH0-pulses_2.tdms  TDMS-CH1-pulses_2.tdms  pulses-10.CSV  pulses-100.CSV  pulses-5-modified.csv
src/Controller/: Controller.py  ModelController.py  ViewController.py
src/Model/: DataAnalyser.py  Digitizer.py  Error.py
src/View/: Bypass.py  Feedback.py  FileSelector.py  GraphShowcase.py  InfoTir.py  ListOfResults.py  MenuBar.py  Style.py
src/detectors/: base_detector.py  bergoz_bct.py  detector.py
src/digitizers/: digitizer.py  digitizer_channel.py
(+159 files in other folders)
